# omniglot-tock

./: .gitmodules  AUTHORS.md  Cargo.toml  LICENSE-MIT  README.md  node-setup.sh  osdi25-eval-reproduce.sh  rust-toolchain.toml  shell.nix
examples/cargo/: tock_flags.toml
examples/littlefs/: Cargo.toml  Makefile  build.rs  og_littlefs.omniglot.toml
examples/littlefs-boards/earlgrey-cw310/: Cargo.toml  Makefile
examples/littlefs-boards/earlgrey-cw310/src/: main.rs
examples/littlefs/c_src/: og_littlefs.c  og_littlefs.h  og_littlefs_tbf.c
examples/littlefs/src/: filecontents1024.txt  lib.rs
examples/lwip/: .gitignore  Cargo.toml  Makefile  build.rs  lwip.omniglot.toml  rustfmt-bindgen.toml
examples/lwip-boards/earlgrey-cw310/: Cargo.toml  Makefile
examples/lwip-boards/earlgrey-cw310/src/: main.rs
examples/lwip/c_src/: oglwip_tbf.c
examples/lwip/config/: lwipopts.h
examples/lwip/config/arch/: cc.h
examples/lwip/src/: lib.rs
examples/otcrypto/: Cargo.toml  Makefile  build.rs  otcrypto.omniglot.toml
examples/otcrypto-boards/earlgrey-cw310/: Cargo.toml  Makefile  og_layout.ld
examples/otcrypto-boards/earlgrey-cw310/src/: main.rs  otcrypto_libhmac_id.rs
examples/otcrypto/c_src/: omniglot_otcrypto_tbf.c  omniglot_otcrypto_tbf.h
examples/otcrypto/src/: hmac_bench.rs  lib.rs  og_otcrypto_hmac.rs  og_otcrypto_hmac_nocopy.rs  unsafe_otcrypto_hmac.rs  unsafe_otcrypto_hmac_validate.rs
examples/ubench/: Cargo.toml  Makefile  build.rs  ubench.omniglot.toml
examples/ubench-boards/earlgrey-cw310/: Cargo.toml  Makefile  layout.ld  og_layout.ld
examples/ubench-boards/earlgrey-cw310/src/: main.rs
examples/ubench/c_src/: ogubench_tbf.c  ubench.c  ubench.h
examples/ubench/src/: lib.rs  randbytes.rs
omniglot-tock/: Cargo.toml
omniglot-tock/omniglot_c_rt/: Configuration.mk  OmniglotTBF.mk  init_riscv32.S  omniglot_layout.ld  sys.c
omniglot-tock/src/: binary.rs  lib.rs  rv32i_c_rt.rs
osdi25-eval-sample-outputs/: osdi25-eval-reproduce-output-1750782894-cryptolib-checked.txt  osdi25-eval-reproduce-output-1750782894-cryptolib-native.txt  osdi25-eval-reproduce-output-1750782894-cryptolib-unchecked.txt  osdi25-eval-reproduce-output-1750782894-littlefs-checked.txt  osdi25-eval-reproduce-output-1750782894-littlefs-unchecked.txt  osdi25-eval-reproduce-output-1750782894-lwip-checked.txt  osdi25-eval-reproduce-output-1750782894-lwip-unchecked-isolonly.txt  osdi25-eval-reproduce-output-1750782894-lwip-unchecked-unsafe.txt  osdi25-eval-reproduce-output-1750782894-ubench-callback.txt  osdi25-eval-reproduce-output-1750782894-ubench-invoke.txt  osdi25-eval-reproduce-output-1750782894-ubench-setup.txt  osdi25-eval-reproduce-output-1750782894-ubench-upgrade.txt  osdi25-eval-reproduce-output-1750782894-ubench-validate.txt
